2 files modified, 2 added

--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
 <body>
   <my-element></my-element>
   <update-properties></update-properties>
+  <my-render>
+    <p>Rnender me</p>
+  </my-render>
+  <my-page></my-page>
 </body>
 </html>
