3 files modified, 3 added

--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <p>Rnender me</p>
   </my-render>
   <my-page></my-page>
+  <light-dom></light-dom>
+  <gtc-wc-external></gtc-wc-external>
 </body>
 </html>
