--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
   <script src="/node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
   <script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   
-  <script type="module" src="./my-element.js"></script>
+  <!-- <script type="module" src="./my-element.js"></script> -->
+  <script type="module" src="./gtc-wc-external.js"></script>
   <title>lit-element code sample</title>
 </head>
 <body>
-  <my-element></my-element>
+  <!-- <my-element></my-element>
   <update-properties></update-properties>
   <my-render>
     <p>Rnender me</p>
   </my-render>
   <my-page></my-page>
-  <light-dom></light-dom>
+  <light-dom></light-dom> -->
   <gtc-wc-external></gtc-wc-external>
 </body>
 </html>
