3 files modified, 1 added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   
   <!-- <script type="module" src="./my-element.js"></script> -->
   <script type="module" src="./gtc-wc-external.js"></script>
+    <script type="module" src="./gtc-wc-external.js"></script>
+
   <title>lit-element code sample</title>
 </head>
 <body>
