--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <script src="/node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
   <script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   
-  <!-- <script type="module" src="./my-element.js"></script> -->
+  <script type="module" src="./my-element.js"></script>
   <script type="module" src="./gtc-wc-external.js"></script>
-    <script type="module" src="./gtc-wc-external.js"></script>
 
   <title>lit-element code sample</title>
 </head>
@@ -22,5 +21,6 @@
   <my-page></my-page>
   <light-dom></light-dom> -->
   <gtc-wc-external></gtc-wc-external>
+  <!-- <my-element></my-element> -->
 </body>
 </html>
