--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   <my-page></my-page>
   <light-dom></light-dom> -->
   <gtc-wc-external></gtc-wc-external>
-  <!-- <my-element></my-element> -->
+  <my-element></my-element>
 </body>
 </html>
