--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script type="module" src="./my-element.js"></script>
   <script type="module" src="./gtc-wc-external.js"></script>
 
+
   <title>lit-element code sample</title>
 </head>
 <body>
@@ -21,6 +22,6 @@
   <my-page></my-page>
   <light-dom></light-dom> -->
   <gtc-wc-external></gtc-wc-external>
-  <my-element></my-element>
+  <!-- <my-element></my-element> -->
 </body>
 </html>
